Fixed swagger inline format
